Implement minimal initserver setup flow
